src/objects/Case_State_Transition__c.object
<CustomObject>
    <fields>
        <fullName>AMC_Tag__c</fullName>
        <formula>IF(Case__r.AMC_Service_Tag__c &lt;&gt; False, &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMC Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Approved_Date__c</fullName>
        <formula>Case__r.Application_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Cancellation_Date__c</fullName>
        <formula>Case__r.Application_Cancellation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>TCP</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Mediator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>Text(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case State Transition</relationshipLabel>
        <relationshipName>Case_State_Transition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Energization_Date__c</fullName>
        <formula>Case__r.Energization_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date_Stamp__c</fullName>
        <label>From Date Stamp</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_State__c</fullName>
        <label>From State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_From_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include From Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mediator_Reference_Trans_ID__c</fullName>
        <label>Mediator Reference Trans ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mediator_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mediator Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Days__c</fullName>
        <formula>To_Date_Stamp__c  -  From_Date_Stamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Mediator_No_Of_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Previous Mediator No Of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SingleMultimeter__c</fullName>
        <formula>&quot;Single/Multimeter&quot;</formula>
        <label>Single/MM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date_Stamp__c</fullName>
        <label>To Date Stamp</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_State__c</fullName>
        <label>To State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Days__c</fullName>
        <formula>No_Of_Days__c  +  Previous_Mediator_No_Of_Days__c  + IF( Include_From_Date__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case State Transition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>From_State__c</columns>
        <columns>From_Date_Stamp__c</columns>
        <columns>To_State__c</columns>
        <columns>To_Date_Stamp__c</columns>
        <columns>Calculation_Type__c</columns>
        <columns>Include_From_Date__c</columns>
        <columns>No_Of_Days__c</columns>
        <columns>Previous_Mediator_No_Of_Days__c</columns>
        <columns>Total_Number_of_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Approved_Date__c</field>
            <operation>greaterThan</operation>
            <value>4/5/2016</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PerCase</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>From_State__c</columns>
        <columns>From_Date_Stamp__c</columns>
        <columns>To_State__c</columns>
        <columns>To_Date_Stamp__c</columns>
        <columns>Calculation_Type__c</columns>
        <columns>Include_From_Date__c</columns>
        <columns>No_Of_Days__c</columns>
        <columns>Previous_Mediator_No_Of_Days__c</columns>
        <columns>Total_Number_of_Days__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case__c</field>
            <operation>equals</operation>
            <value>A1705-00160883</value>
        </filters>
        <label>PerCase</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>per_Case2</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>From_State__c</columns>
        <columns>From_Date_Stamp__c</columns>
        <columns>To_State__c</columns>
        <columns>To_Date_Stamp__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case__c</field>
            <operation>equals</operation>
            <value>A1710-00393540</value>
        </filters>
        <label>per Case</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Transition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case State Transition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>